--- a/home/index.html
+++ b/home/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    />
-    <title>Pricing</title>
+    <title>OM Landing</title>
     <script
       type="module"
       crossorigin
