Refactor: Replace <h2> tags with <p> tags for consistency in call-to-action sections across multiple HTML files, and remove .DS_Store files from various directories for improved project organization.

--- a/privacyPolicy/index.html
+++ b/privacyPolicy/index.html
@@ -1766,7 +1766,7 @@
         class="section-cta__content animate__animated opacity-0 flex flex-col items-center gap-y-[25px]"
       >
         <div class="flex flex-col items-center gap-y-5 text-center">
-          <h2 class="heading-gradient text-2xl sm:text-[50px]">Ready to get started?</h2>
+          <p class="heading-gradient text-2xl sm:text-[50px]">Ready to get started?</p>
           <p
             class="w-[343px] sm:w-[611px] text-[#E2E8F0] text-base sm:text-[20px] font-normal leading-[140%] tracking-[-0.3px] mx-auto opacity-80"
           >
