--- a/home/index.html
+++ b/home/index.html
@@ -2008,15 +2008,12 @@
           aria-labelledby="all-in-flatform"
         >
           <div class="section lg:block hidden section-all-in-flatform-title opacity-0">
-            <h2
-              class="animate__animated text-center font-poppins font-medium leading-tight heading-gradient"
-            >
-              The all-in-one platform you ever need to
-            </h2>
-            <h2
-              class="animate__animated text-center font-poppins font-medium leading-tight heading-gradient"
-            >
-              win mobile commerce
+            <h2 class="heading-gradient text-center leading-tight">
+              <span class="animate__animated heading-gradient">
+                The all-in-one platform you ever need to win
+              </span>
+
+              <span class="animate__animated heading-gradient"> mobile commerce </span>
             </h2>
           </div>
           <div class="section block lg:hidden">
@@ -2525,7 +2522,7 @@
                     <div class="z-2 flex-1 flex flex-col">
                       <div class="flex items-center gap-1">
                         <div class="flex-1">
-                          <h3
+                          <p
                             class="heading-gradient font-poppins flex items-center gap-2 font-medium text-base md:text-[22px]"
                           >
                             <span> Website visitors </span>
@@ -2550,7 +2547,7 @@
                               />
                             </svg>
                             <span>Installs</span>
-                          </h3>
+                          </p>
                         </div>
                         <img
                           loading="lazy"
@@ -2592,7 +2589,7 @@
                     <div class="z-2 flex-1 flex flex-col">
                       <div class="flex items-center gap-1">
                         <div class="flex-1">
-                          <h3
+                          <p
                             class="heading-gradient font-poppins flex items-center gap-2 font-medium text-base md:text-[22px]"
                           >
                             <span> Website visitors </span>
@@ -2617,7 +2614,7 @@
                               />
                             </svg>
                             <span>Installs</span>
-                          </h3>
+                          </p>
                         </div>
                         <img
                           loading="lazy"
@@ -2735,14 +2732,11 @@
                           <div class="z-2 flex-1 flex flex-col">
                             <div class="flex items-center gap-1">
                               <div class="flex-1">
-                                <h3
-                                  class="heading-gradient font-poppins-2 font-medium text-base md:text-[22px]"
-                                  flex
-                                  items-center
-                                  gap
+                                <p
+                                  class="heading-gradient font-poppins-2 font-medium text-base md:text-[22px] flex items-center gap"
                                 >
                                   Personalized push notifications
-                                </h3>
+                                </p>
                               </div>
                               <img
                                 loading="lazy"
@@ -2789,11 +2783,11 @@
                           <div class="z-2 flex-1 flex flex-col">
                             <div class="flex items-center gap-1">
                               <div class="flex-1">
-                                <h3
+                                <p
                                   class="heading-gradient font-poppins flex items-center gap-2 font-medium text-base md:text-[22px]"
                                 >
                                   Personalized push notifications
-                                </h3>
+                                </p>
                               </div>
                               <img
                                 loading="lazy"
@@ -3122,7 +3116,7 @@
         >
           <h2
             id="integrations-apps-title"
-            class="section-integrations-apps__title animate__animated opacity-0 heading-gradient md:text-start text-center"
+            class="section-integrations-apps__title animate__animated opacity-0 heading-gradient text-center md:text-start"
           >
             Integrations to unleash your app’s potential
           </h2>
@@ -3455,7 +3449,7 @@
         class="section-cta__content animate__animated opacity-0 flex flex-col items-center gap-y-[25px]"
       >
         <div class="flex flex-col items-center gap-y-5 text-center">
-          <h2 class="heading-gradient text-2xl sm:text-[50px]">Ready to get started?</h2>
+          <p class="heading-gradient text-2xl sm:text-[50px]">Ready to get started?</p>
           <p
             class="w-[343px] sm:w-[611px] text-[#E2E8F0] text-base sm:text-[20px] font-normal leading-[140%] tracking-[-0.3px] mx-auto opacity-80"
           >
