Refactor: Update heading tags to improve semantic structure in blog and pricing HTML files, replace .DS_Store files for better project organization, and update asset references in home HTML file to new CDN URLs for enhanced performance.

--- a/pricing/index.html
+++ b/pricing/index.html
@@ -698,7 +698,8 @@
           <h1
             class="max-w-[343px] sm:max-w-[657px] mx-auto heading-gradient text-[30px] sm:text-[54px]"
           >
-            Start for free, pay only when you publish.
+            <span class="heading-gradient"> Start for free, pay only </span>
+            <span class="heading-gradient"> when you publish.</span>
           </h1>
           <p
             class="max-w-[343px] sm:max-w-[657px] text-text-body tracking-[0.64px] leading-[19.6px] sm:leading-[25.6px] mx-auto text-sm sm:text-base font-medium sm:font-normal"
@@ -727,19 +728,19 @@
               >
                 <div class="flex flex-col gap-y-4 md:gap-y-7">
                   <div class="flex flex-col gap-y-[5.5px]">
-                    <p class="uppercase text-white text-xl leading-[27.742px] font-semibold">
+                    <h2 class="uppercase text-white text-xl leading-[27.742px] font-semibold">
                       free
-                    </p>
+                    </h2>
                     <div class="w-[55.484px] h-[2.774px] bg-[#E3E3E3] rounded-[2px]"></div>
                   </div>
-                  <p
+                  <h3
                     class="font-secondary text-white text-[40px] md:text-[50px] heading-gradient font-semibold"
                   >
                     0&nbsp;<span class="inline-flex items-center"
                       ><span class="text-xl md:text-2xl">USD&nbsp;</span
                       ><span class="text-xs md:text-sm font-normal">/&nbsp;Month</span></span
                     >
-                  </p>
+                  </h3>
                 </div>
 
                 <a
@@ -901,19 +902,19 @@
               >
                 <div class="flex flex-col gap-y-4 md:gap-y-7">
                   <div class="flex flex-col gap-y-[5.5px]">
-                    <p class="uppercase text-white text-xl leading-[27.742px] font-semibold">
+                    <h2 class="uppercase text-white text-xl leading-[27.742px] font-semibold">
                       start<span class="text-[#A0A0A0]">up</span>
-                    </p>
+                    </h2>
                     <div class="w-[55.484px] h-[2.774px] bg-[#E3E3E3] rounded-[2px]"></div>
                   </div>
-                  <p
+                  <h3
                     class="font-secondary text-white text-[40px] md:text-[50px] heading-gradient font-semibold"
                   >
                     29&nbsp;<span class="inline-flex items-center"
                       ><span class="text-xl md:text-2xl">USD&nbsp;</span
                       ><span class="text-xs md:text-sm font-normal">/&nbsp;Month</span></span
                     >
-                  </p>
+                  </h3>
                 </div>
 
                 <a
@@ -1155,19 +1156,19 @@
                 </div>
                 <div class="flex flex-col gap-y-4 md:gap-y-7">
                   <div class="flex flex-col gap-y-[5.5px]">
-                    <p class="uppercase text-white text-xl leading-[27.742px] font-semibold">
+                    <h2 class="uppercase text-white text-xl leading-[27.742px] font-semibold">
                       scale<span class="text-[#A0A0A0]">up</span>
-                    </p>
+                    </h2>
                     <div class="w-[55.484px] h-[2.774px] bg-[#E3E3E3] rounded-[2px]"></div>
                   </div>
-                  <p
+                  <h3
                     class="font-secondary text-white text-[40px] md:text-[50px] heading-gradient font-semibold"
                   >
                     99&nbsp;<span class="inline-flex items-center"
                       ><span class="text-xl md:text-2xl">USD&nbsp;</span
                       ><span class="text-xs md:text-sm font-normal">/&nbsp;Month</span></span
                     >
-                  </p>
+                  </h3>
                 </div>
 
                 <a
@@ -1439,19 +1440,19 @@
               >
                 <div class="flex flex-col gap-y-4 md:gap-y-7">
                   <div class="flex flex-col gap-y-[5.5px]">
-                    <p class="uppercase text-white text-xl leading-[27.742px] font-semibold">
+                    <h2 class="uppercase text-white text-xl leading-[27.742px] font-semibold">
                       brand<span class="text-[#A0A0A0]">up</span>
-                    </p>
+                    </h2>
                     <div class="w-[55.484px] h-[2.774px] bg-[#E3E3E3] rounded-[2px]"></div>
                   </div>
-                  <p
+                  <h3
                     class="font-secondary text-white text-[40px] md:text-[50px] heading-gradient font-semibold"
                   >
                     299&nbsp;<span class="inline-flex items-center"
                       ><span class="text-xl md:text-2xl">USD&nbsp;</span
                       ><span class="text-xs md:text-sm font-normal">/&nbsp;Month</span></span
                     >
-                  </p>
+                  </h3>
                 </div>
 
                 <a
@@ -1703,19 +1704,19 @@
               >
                 <div class="flex flex-col gap-y-4 md:gap-y-7">
                   <div class="flex flex-col gap-y-[5.5px]">
-                    <p class="uppercase text-white text-xl leading-[27.742px] font-semibold">
+                    <h2 class="uppercase text-white text-xl leading-[27.742px] font-semibold">
                       omni
-                    </p>
+                    </h2>
                     <div class="w-[55.484px] h-[2.774px] bg-[#E3E3E3] rounded-[2px]"></div>
                   </div>
-                  <p
+                  <h3
                     class="font-secondary text-white text-[40px] md:text-[50px] heading-gradient font-semibold"
                   >
                     990&nbsp;<span class="inline-flex items-center"
                       ><span class="text-xl md:text-2xl">USD&nbsp;</span
                       ><span class="text-xs md:text-sm font-normal">/&nbsp;Month</span></span
                     >
-                  </p>
+                  </h3>
                 </div>
 
                 <a
@@ -2025,10 +2026,8 @@
                       class="flex flex-col justify-center items-center px-[6px] pt-3 lg:pt-4 pb-[22px] lg:pb-[26px] gap-4"
                     >
                       <div class="flex flex-col justify-center items-center gap-2 lg:gap-3">
-                        <span class="text-base font-medium leading-[150%] tracking-[-0.3px]"
-                          >FREE</span
-                        >
-                        <span class="heading-gradient text-lg lg:text-xl font-semibold">$0/mo</span>
+                        <h2 class="text-base font-medium leading-[150%] tracking-[-0.3px]">FREE</h2>
+                        <h3 class="heading-gradient text-lg lg:text-xl font-semibold">$0/mo</h3>
                       </div>
                       <a
                         href="https://shopify.pxf.io/GKDRNn"
@@ -2043,12 +2042,10 @@
                       class="flex flex-col justify-center items-center px-[6px] pt-3 lg:pt-4 pb-[22px] lg:pb-[26px] gap-4"
                     >
                       <div class="flex flex-col justify-center items-center gap-2 lg:gap-3">
-                        <span class="text-base font-medium leading-[150%] tracking-[-0.3px]"
-                          >STARTUP</span
-                        >
-                        <span class="heading-gradient text-lg lg:text-xl font-semibold"
-                          >$29/mo</span
-                        >
+                        <h2 class="text-base font-medium leading-[150%] tracking-[-0.3px]">
+                          STARTUP
+                        </h2>
+                        <h3 class="heading-gradient text-lg lg:text-xl font-semibold">$29/mo</h3>
                       </div>
                       <a
                         href="https://shopify.pxf.io/gOoaEg"
@@ -2063,12 +2060,10 @@
                       class="flex flex-col justify-center items-center px-[6px] pt-3 lg:pt-4 pb-[22px] lg:pb-[26px] gap-4"
                     >
                       <div class="flex flex-col justify-center items-center gap-2 lg:gap-3">
-                        <span class="text-base font-medium leading-[150%] tracking-[-0.3px]"
-                          >SCALEUP</span
-                        >
-                        <span class="heading-gradient text-lg lg:text-xl font-semibold"
-                          >$99/mo</span
-                        >
+                        <h2 class="text-base font-medium leading-[150%] tracking-[-0.3px]">
+                          SCALEUP
+                        </h2>
+                        <h3 class="heading-gradient text-lg lg:text-xl font-semibold">$99/mo</h3>
                       </div>
                       <a
                         href="https://shopify.pxf.io/BnKRMB"
@@ -2083,12 +2078,10 @@
                       class="flex flex-col justify-center items-center px-[6px] pt-3 lg:pt-4 pb-[22px] lg:pb-[26px] gap-4"
                     >
                       <div class="flex flex-col justify-center items-center gap-2 lg:gap-3">
-                        <span class="text-base font-medium leading-[150%] tracking-[-0.3px]"
-                          >BRANDUP</span
-                        >
-                        <span class="heading-gradient text-lg lg:text-xl font-semibold"
-                          >$299/mo</span
-                        >
+                        <h2 class="text-base font-medium leading-[150%] tracking-[-0.3px]">
+                          BRANDUP
+                        </h2>
+                        <h3 class="heading-gradient text-lg lg:text-xl font-semibold">$299/mo</h3>
                       </div>
                       <a
                         href="https://shopify.pxf.io/09YRNO"
@@ -2103,12 +2096,8 @@
                       class="flex flex-col justify-center items-center px-[6px] pt-3 lg:pt-4 pb-[22px] lg:pb-[26px] gap-4"
                     >
                       <div class="flex flex-col justify-center items-center gap-2 lg:gap-3">
-                        <span class="text-base font-medium leading-[150%] tracking-[-0.3px]"
-                          >OMNI</span
-                        >
-                        <span class="heading-gradient text-lg lg:text-xl font-semibold"
-                          >$999/mo</span
-                        >
+                        <h2 class="text-base font-medium leading-[150%] tracking-[-0.3px]">OMNI</h2>
+                        <h3 class="heading-gradient text-lg lg:text-xl font-semibold">$999/mo</h3>
                       </div>
                       <a
                         href="https://shopify.pxf.io/EEqRNW"
@@ -6836,6 +6825,7 @@
 
       <!-- FAQ -->
       <section class="pricing-faq pt-10 md:pt-[60px] max-w-[1120px] mx-auto px-4 md:px-6">
+        <h2 class="heading-gradient text-center mb-10">FAQ</h2>
         <div
           class="flex flex-col items-center gap-10 flex-1 py-10 md:py-10 px-5 md:px-10 rounded-[20px] border border-[#2E2E2E] bg-[#080808] shadow-[inset_0px_0px_40px_0px_rgba(233,115,115,0.25)]"
         >
