fix: update link text for blog navigation in index.html to improve clarity

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <a href="https://vuongnq.github.io/om-landing/blog/">Blog detail</a>
     </li>
     <li>
-      <a href="https://vuongnq.github.io/om-landing/ourBlog">Blog our</a>
+      <a href="https://vuongnq.github.io/om-landing/ourBlog">OurBlog</a>
     </li>
   </ul>
 </body>
